<resources>
    <string name="app_name">鲸鱼理财</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world!</string>
    <string name="warning">"提   示"</string>
    <string name="jinr_kefu">"鲸鱼客服"</string>
    <string name="lockmessage">"请输入登录密码"</string>
    <string name="input_txt">"请输入手机号注册或者登录"</string>
    <string name="to_finish">"去完成"</string>
    <string name="dialog_call_bt">"拨打"</string>
    <string name="dialog_call_bt_ok">"确定"</string>
    <string name="dialog_call_bt_sure">"确认"</string>
    <string name="dialog_call_bt_cancel">"取消"</string>
    <string name="dialog_set">"设置"</string>
    <string name="dialog_set_hint">"您尚未设置手势密码，是否去设置？"</string>
    <string name="dialog_call">"确定拨打客服电话？"</string>
    <string name="dialog_real_name">"您还没有完成实名认证、银行卡绑定！"</string>
    <string name="dialog_real_name_one">"您还没有完成实名认证、银行卡绑定、交易密码设置！"</string>
    <string name="dialog_bind_card">"您还没有完成银行卡绑定！"</string>
    <string name="dialog_bind_card_two">"您还没有完成银行卡绑定、交易密码设置！"</string>
    <string name="dialog_deal_passwd">"您还没有完成交易密码设置！"</string>
    <string name="my_assets">我的资产</string>
    <string name="whale">鲸鱼保障</string>
    <string name="whale_detail">鲸鱼金融闪电垫付</string>
    <string name="effective">高效活期</string>
    <string name="effective_detail">每日结算,随时提现</string>
    <string name="safe">简单安全</string>
    <string name="safe_detail">1元投资陆金所</string>
    <string name="turn_in">转入</string>
    <string name="turn_out">转出</string>
    <string name="c_turn_in">转入活期</string>
    <string name="gift_earn">"(含红包收益)"</string>
    <string name="all_assets">总资产 (元)</string>
    <string name="my_all_assets">账户总资产 (元)</string>
    <string name="all_money">总金额(元)</string>
    <string name="gift_money">"红包金额 (元)"</string>
    <string name="new_all_assets">"资产金额 (元)\n红包金额 (元)"</string>
    <string name="all_million_earn">万份收益(元)</string>
    <string name="all_earn">累计收益(元)</string>
    <string name="yesterday_earn">昨日收益 (元)</string>
    <string name="today_earn">今日预期收益 (元)</string>
    <string name="ten_thousand_earn">预期万元收益 (元)</string>
    <string name="one_month_earn">近一月收益(元)</string>
    <string name="one_week_earn">近一周收益(元)</string>
    <string name="average_balance">七日年化收益率</string>
    <string name="average_balance_s">七日年化收益率(%)</string>
    <string name="new_all_earn">"累计收益 (元)\n(含红包累计收益)"</string>
    <string name="current_assets">"活期资产 "</string>
    <string name="regular_assets">"定期资产"</string>
    <string name="dayup_assets">"日增息资产"</string>
    <string name="strongbox_assets">"保险箱资产"</string>
    <string name="rest_assets">"余额资产"</string>
    <string name="get_cash_now">正转出 (元)</string>
    <string name="title_short1">高收益</string>
    <string name="title_short2">零风险</string>
    <string name="title_short3">高效活期</string>
    <string name="title_long1">今日年化收益</string>
    <string name="title_long3">日结息、随进随出</string>
    <string name="string_zero">0.00</string>
    <string name="titleLeftMenu">左侧菜单</string>
    <string name="index">主页</string>
    <string name="idcard">银行卡管理</string>
    <string name="bankcard">银行卡</string>
    <string name="nobankcard">现在绑卡，赚钱捷足先登！</string>
    <string name="sec">安全</string>
    <string name="more">更多</string>
    <string name="contact_customer">联系客服</string>
    <string name="gift">福利</string>
    <string name="find">发现</string>
    <string name="gift_list">"红包列表"</string>
    <string name="gift_rule">"活动细则"</string>
    <string name="sec_center">安全中心</string>
    <string name="title_left_menu">财主，</string>
    <string name="login_left_menu">请登录</string>
    <string name="the_mobile">绑定手机号</string>
    <string name="real_name">实名认证</string>
    <string name="login_passwd">登录密码</string>
    <string name="chg_login_passwd">修改登录密码</string>
    <string name="deal_passwd_a">原交易密码</string>
    <string name="new_deal_passwd">新交易密码</string>
    <string name="submit_deal_passwd">确认交易密码</string>
    <string name="old_login_passwd">原始登录密码</string>
    <string name="new_login_passwd">新登录密码</string>
    <string name="submit_login_passwd">确认登录密码</string>
    <string name="deal_passwd">交易密码</string>
    <string name="lock_pattern">手势密码</string>
    <string name="modify_pattern">修改手势密码</string>
    <string name="change">修改</string>
    <string name="un_set">未设置</string>
    <string name="un_name">未认证</string>
    <string name="new_mobile">填写新手机号码</string>
    <string name="modify_code">验证码</string>
    <string name="send_modify_code">获取验证码</string>
    <string name="agin_modify_code">重新获取</string>
    <string name="personal_name">真实姓名</string>
    <string name="mobile_no">手机号</string>
    <string name="personal_id">身份证号</string>
    <string name="submit">确定</string>
    <string name="the_submit">确认</string>
    <string name="about_us">关于鲸鱼金融</string>
    <string name="check_update">检查更新</string>
    <string name="contact_us">联系客服</string>
    <string name="left_security_guarantee">安全保障</string>
    <string name="left_platform_data">营运数据</string>
    <string name="left_redeem_code">兑换码</string>
    <string name="current_version">当前版本v</string>
    <string name="logout">退出当前账号</string>
    <string name="mobile_and_email">手机号码/邮箱</string>
    <string name="login_or_reg">请输入手机号</string>
    <string name="passwd">密码</string>
    <string name="pwd_alert">6~16位的非纯数字密码 </string>
    <string name="pwd_deal_alert">6位纯数字密码 </string>
    <string name="passwd_limited">密码不能小于6位</string>
    <string name="card_id_limited">身份证号</string>
    <string name="register_submit_passwd">确认密码</string>
    <string name="forgot_passwd">"忘记密码?"</string>
    <string name="forgot_the_passwd">忘记密码</string>
    <string name="forgot_deal_passwd">忘记交易密码？</string>
    <string name="next_in">下一步</string>
    <string name="login_in">登 录</string>
    <string name="login_in_submit">确 定</string>
    <string name="immediately_register">注册</string>
    <string name="tel_no">手机号码</string>
    <string name="register">注 册</string>
    <string name="input_new_passwd">输入新密码</string>
    <string name="submit_new_passwd">确认新密码</string>
    <string name="i_agree">"注册代表我已阅读并同意"</string>
    <string name="about_us_title">关于我们</string>
    <string name="i_agree_checked">"请勾选同意协议"</string>
    <string name="mobile_no_checked">"11位手机号码"</string>
    <string name="mobile_no_checked_one">"手机号码不一致"</string>
    <string name="mobile_no_reply_checked">"请不要重复绑定该手机号"</string>
    <string name="mobile_no_reply_checked_one">"该手机号已经被您绑定"</string>
    <string name="mobile_email_checked">"手机号码或邮箱"</string>
    <string name="code_checked">"短信验证码"</string>
    <string name="passwd_checked">"密码"</string>
    <string name="passwd_login_checked">"登录密码"</string>
    <string name="submit_passwd_checked">"确认密码"</string>
    <string name="passwd_equal_checked">"两次密码不一致,请重新设置"</string>
    <string name="sub_mit">提交中</string>
    <string name="default_error">"网络不给力,请刷新"</string>
    <string name="register_error">"修改失败,请稍后重试"</string>
    <string name="register_success">"注册成功"</string>
    <string name="login_in_success">"登录成功"</string>
    <string name="forgot_passwd_success">"密码重置成功"</string>
    <string name="set_deal_passwd">"设置交易密码"</string>
    <string name="find_deal_passwd">"找回交易密码"</string>
    <string name="add_bank_card">"添加银行卡"</string>
    <string name="select_bank_card">"选择银行"</string>
    <string name="bank_card_no">"卡号"</string>
    <string name="bank_card_city">"开户城市"</string>
    <string name="bank_card_branch">"开户支行"</string>
    <string name="bind">"绑定"</string>
    <string name="bind_bank_card">"绑定银行卡"</string>
    <string name="remove_bind">"修改绑定"</string>
    <string name="name">"姓名"</string>
    <string name="open_bank_checked">"请选择开户银行"</string>
    <string name="select_bank_city">选择开户城市</string>
    <string name="hint_card">请输入银行卡号</string>
    <string name="bank_card_checked">"银行卡格式不正确"</string>
    <string name="bank_city_checked">"请选择开户所在城市"</string>
    <string name="input_city">"城市中文名或拼音首字母"</string>
    <string name="input_bank">"银行中文名或拼音首字母"</string>
    <string name="bank_branch_checked">"开户支行中文"</string>
    <string name="bind_bank_success">"绑定成功"</string>
    <string name="name_checked">"姓名"</string>
    <string name="bind_card_tip">鲸鱼仅支持银行储蓄卡</string>
    <string name="name_equal_checked">"姓名与实名认证不一致,请重新输入"</string>
    <string name="card_detail">"银行卡详情"</string>
    <string name="card_detail_remove">"银行卡解除绑定成功"</string>
    <string name="card_change_city">"选择城市"</string>
    <string name="card_change_bank">"选择银行"</string>
    <string name="change_bind_mobile">修改绑定手机号</string>
    <string name="change_bind_mobile_success">绑定手机号修改成功</string>
    <string name="identify_title">验证身份</string>
    <string name="person_info_title">实名认证信息</string>
    <string name="identify_success">身份验证成功</string>
    <string name="id_no_checked">身份证号格式不正确</string>
    <string name="change_login_passwd">修改登录密码</string>
    <string name="please_input">请输入</string>
    <string name="change_passwd_success">修改登录密码成功</string>
    <string name="change_deal_passwd_success">修改交易密码成功</string>
    <string name="set_deal_passwd_success">设置交易密码成功</string>
    <string name="recieve_bank_card">收款银行卡</string>
    <string name="get_cash_much">转出金额</string>
    <string name="can_use_cash">当前可转出金额</string>
    <string name="service_tip">手续费</string>
    <string name="next">下一步</string>
    <string name="two_dollar">"￥2.00"</string>
    <string name="look_deal_record">"查看交易记录"</string>
    <string name="deal_record">"交易记录"</string>
    <string name="back_to_main">"返回首页"</string>
    <string name="input_int">"建议转入100元以上金额"</string>
    <string name="regular_input_int">"100元起投"</string>
    <string name="not_sufficient_funds">您当前账户余额不足</string>
    <string name="purchase_no">"金额"</string>
    <string name="pay_in">"确认转入"</string>
    <string name="pay_out">"下一步"</string>
    <string name="had_purcharse">"已购份额"</string>
    <string name="submit_order">"确认订单"</string>
    <string name="can_use_enough">"可转出金额不足"</string>
    <string name="can_use_limite">"转出金额要大于2元"</string>
    <string name="submit_security_identify">"确认安全验证"</string>
    <string name="had_purcharse_tips">"鲸鱼金融将为您支付购买手续费"</string>
    <string name="puchase_tips">"温馨提示"</string>
    <string name="puchase_tips_one">"该卡最多可转入50000.00元"</string>
    <string name="not_code">收不到验证码</string>
    <string name="code_content">\t1 . 邀请码有什么用？\n\n\t您在注册后填写好友分享的邀\n\t请码,即可获得0.2%的加息券。\n\n\t2 . 从哪能获得加息券？\n\n\t您可以向鲸鱼老用户索要,或者\r\n\t在网上搜索碰碰运气</string>
    <string name="message_content">验证码发送至你的银行预留手机号码\n1、请确认当前是否使用银行预留的手机号码 。\n2、请检查短信是否被手机安全软件拦截。\n3、若预留手机号码已停用，请联系银行客服咨询.\n4、获取更多帮助， 请拨打客服电话: </string>
    <string name="loading">请稍候&#8230;</string>
    <string name="back_to_exit">再按一次退出程序</string>
    <string name="purchase_success">申购成功</string>
    <string name="get_cash_success">转出申请完成</string>
    <string name="purchase_text_two">"申购金额:"</string>
    <string name="purchase_text_three">"交易编号:"</string>
    <string name="purchase_text_one">"您已成功申购鲸鱼,请及时查看您的账户,会有惊喜哦!\n\n"</string>
    <string name="format_a">"收款银行卡:"</string>
    <string name="format_b">"预计最迟到账时间:"</string>
    <string name="format_c">"24点前\n转出资金"</string>
    <string name="format_d">仍有收益\n如遇节假日,请往后顺延\n\n实际到账金额:</string>
    <string name="format_e">"元\n手续费:"</string>
    <string name="format_g">"元"</string>
    <string name="format_f">" 后重发"</string>
    <string name="format_f_f">"再次发送"</string>
    <string name="trend">"收益走势"</string>
    <string name="gift_rule_one">"红包细则"</string>
    <string name="all_record">所有记录</string>
    <string name="all">全部</string>
    <string name="current">活期</string>
    <string name="productCommonModel">定期资产</string>
    <string name="btn_balance_in">充值</string>
    <string name="btn_balance_out">提现</string>
    <string name="tv_balance_explain">余额说明</string>
    <string name="trans_money">转让金额：</string>
    <string name="expect_fees">预计手续费</string>
    <string name="fees_describle">转让金额*0.2%</string>
</resources>