<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_style_bg"
    android:orientation="vertical" >

    <!-- title布局 -->

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <View style="@style/line" />

    <View
        style="@style/line"
        android:layout_marginTop="20dp" />
    <!-- 线条 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
        android:background="@drawable/back_select"
        android:orientation="horizontal" >

        <View style="@style/line" />

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/had_purcharse"
            android:textColor="@color/main_out_down_text_color" />

        <View
            style="@style/line"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/purchase_sec_tv1"
            style="@style/sec"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text=""
            android:textColor="@color/main_out_down_text_color" />
    </RelativeLayout>

    <TextView
        style="@style/wrap"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/had_purcharse_tips"
        android:textColor="@color/main_out_down_text_color"
        android:textSize="13sp" />
    
    <Button
        android:id="@+id/purchase_sec_bt1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/btn_sure_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_bg_select"
        android:text="@string/pay_in"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/purchase_sec_bt3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@drawable/but_about_white"
            android:padding="10dp"
            android:text="@string/dialog_call_bt_cancel"
            android:textColor="@color/index_bg"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>