<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <View
        android:id="@+id/view"
        style="@style/line"
        android:layout_below="@+id/title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/view"
        android:background="@drawable/balance_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="我的余额(元)" />

        <TextView
            android:id="@+id/tv_bal_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="54sp"/>

    </RelativeLayout>
    
    <Button
        android:id="@+id/btn_balance_in"
        style="@style/btn5_style"
        android:background="@drawable/btn_blue_bg"
        android:text="@string/btn_balance_in"
        android:layout_marginTop="73dp"
        android:textSize="16sp"
        android:textColor="@color/white" />
    
    <Button
        android:id="@+id/btn_balance_out"
        style="@style/btn5_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_white_bg"
        android:text="@string/btn_balance_out"
        android:layout_below="@+id/btn_balance_in"
        android:layout_marginTop="17dp"
        android:textSize="16sp"
        android:textColor="@color/gray_txt_bg" />

    <TextView
        android:id="@+id/tv_balance_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textSize="13sp"
        android:textColor="@color/gray_txt_bg"
        android:text="@string/tv_balance_explain" />

</RelativeLayout>