<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="239dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" 
    android:layout_gravity="center">

    <Button
        android:id="@+id/closed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="-15dp"
        android:background="@drawable/close_keyboard_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_money"
            android:textSize="15sp" />

        <com.jinr.core.utils.MyEditText
            android:id="@+id/trans_money_et"
            style="@style/edit_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expect_fees"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="123"
            android:textSize="15sp" />

        <com.jinr.core.utils.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>

    <View style="@style/line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fees_describle"
        android:textColor="@color/gray_bg_btn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_bg_select"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="确认"
        android:textColor="@color/white"
        android:textSize="18sp" >
    </Button>

</LinearLayout>