<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_style_bg"
    android:orientation="vertical" >

    <!-- title布局 -->

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <View style="@style/line" />

    <View
        style="@style/line"
        android:layout_marginTop="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
        android:background="@color/base_menu_bg"
        android:orientation="horizontal" >

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:text="@string/personal_name"
            android:textColor="@color/main_out_down_text_color" />

        <TextView
            android:id="@+id/real_info_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text=""
            android:textColor="@color/main_out_down_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <View style="@style/line" />

    <!-- 身份证号 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
        android:background="@color/base_menu_bg"
        android:orientation="horizontal" >

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:text="@string/personal_id"
            android:textColor="@color/main_out_down_text_color" />

        <TextView
            android:id="@+id/real_info_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text=""
            android:textColor="@color/main_out_down_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <View style="@style/line" />

    <!-- 手机号 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
        android:background="@color/base_menu_bg" >

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:text="@string/mobile_no"
            android:textColor="@color/main_out_down_text_color" />

        <TextView
            android:id="@+id/real_info_mobile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text=""
            android:textColor="@color/main_out_down_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <View style="@style/line" />

</LinearLayout>